// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`displayTornadoAdvisory - Phase D 配色言語 > NO_COLOR snapshot: normal 1`] = `
"
╔══════════════════════════════════════════════════════════════════════════════╗
║ 竜巻注意情報  発表  [警告]                                                   ║
║ 東京都竜巻注意情報                                                           ║
╠══════════════════════════════════════════════════════════════════════════════╣
║ 東京地方では、竜巻発生のおそれがあります。 竜巻は積乱雲に伴って発生します。  ║
║ 雷や風が急変するなど積乱雲が近づく兆しがある場合には、                       ║
║ 頑丈な建物内に移動するなど、安全確保に努めてください。                       ║
╠══════════════════════════════════════════════════════════════════════════════╣
║ 発表中 54地域  有効期限 08:40                                                ║
╠══════════════════════════════════════════════════════════════════════════════╣
║ [竜巻注意情報（市町村等）]                                                   ║
║   千代田区, 中央区, 港区, 新宿区, 文京区, 台東区, 墨田区, 江東区, 品川区,    ║
║   目黒区, 大田区, 世田谷区, 渋谷区, 中野区, 杉並区, 豊島区, 北区, 荒川区,    ║
║   板橋区, 練馬区, 足立区, 葛飾区, 江戸川区, 八王子市, 立川市, 武蔵野市,      ║
║   三鷹市, 青梅市, 府中市, 昭島市                                             ║
║   ... 他 24 地域 (省略)                                                      ║
╠══════════════════════════════════════════════════════════════════════════════╣
║ VPHW50  2009-08-10 07:38:00  気象庁予報部                                    ║
╚══════════════════════════════════════════════════════════════════════════════╝
"
`;

exports[`displayTornadoAdvisory - Phase D 配色言語 > NO_COLOR snapshot: sighting 1`] = `
"
                                                                                
 ◆◆ 目撃情報あり 東京地方                                                       
                                                                                
╔══════════════════════════════════════════════════════════════════════════════╗
║ 竜巻注意情報（目撃情報付き）  発表  [緊急]                                   ║
║ 東京都竜巻注意情報                                                           ║
╠══════════════════════════════════════════════════════════════════════════════╣
║ 目撃情報あり: 東京地方                                                       ║
╠══════════════════════════════════════════════════════════════════════════════╣
║ 【目撃情報あり】東京都東京地方で竜巻などの激しい突風が発生したとみられます。 ║
║ 東京地方は、竜巻などの激しい突風が発生するおそれが非常に高まっています。     ║
║ 空の様子に注意してください。雷や急な風の変化など積乱雲が近づく兆しがある場合 ║
║ には、頑丈な建物内に移動するなど、安全確保に努めてください。落雷、ひょう、   ║
║ 急な強い雨にも注意してください。                                             ║
╠══════════════════════════════════════════════════════════════════════════════╣
║ 発表中 53地域  有効期限 14:30                                                ║
╠══════════════════════════════════════════════════════════════════════════════╣
║ [竜巻注意情報（市町村等）]                                                   ║
║   千代田区, 中央区, 港区, 新宿区, 文京区, 台東区, 墨田区, 江東区, 品川区,    ║
║   目黒区, 大田区, 世田谷区, 渋谷区, 中野区, 杉並区, 豊島区, 北区, 荒川区,    ║
║   板橋区, 練馬区, 足立区, 葛飾区, 江戸川区, 八王子市, 立川市, 武蔵野市,      ║
║   三鷹市, 青梅市, 府中市, 昭島市                                             ║
║   ... 他 23 地域 (省略)                                                      ║
╠══════════════════════════════════════════════════════════════════════════════╣
║ VPHW51  2014-02-12 13:19:00  気象庁予報部                                    ║
╚══════════════════════════════════════════════════════════════════════════════╝
"
`;

exports[`displayTornadoAdvisory - Phase D 配色言語 > NO_COLOR snapshot: フェイルセーフ (目撃地域抽出失敗) 1`] = `
"
                                                                                
 ◆◆ 目撃情報あり (地域不明)                                                     
                                                                                
╔══════════════════════════════════════════════════════════════════════════════╗
║ 竜巻注意情報（目撃情報付き）  発表  [緊急]                                   ║
║ 東京都竜巻注意情報                                                           ║
╠══════════════════════════════════════════════════════════════════════════════╣
║ 【目撃情報あり】東京都東京地方で竜巻などの激しい突風が発生したとみられます。 ║
║ 東京地方は、竜巻などの激しい突風が発生するおそれが非常に高まっています。     ║
║ 空の様子に注意してください。雷や急な風の変化など積乱雲が近づく兆しがある場合 ║
║ には、頑丈な建物内に移動するなど、安全確保に努めてください。落雷、ひょう、   ║
║ 急な強い雨にも注意してください。                                             ║
╠══════════════════════════════════════════════════════════════════════════════╣
║ 発表中 53地域  有効期限 14:30                                                ║
╠══════════════════════════════════════════════════════════════════════════════╣
║ [竜巻注意情報（市町村等）]                                                   ║
║   千代田区, 中央区, 港区, 新宿区, 文京区, 台東区, 墨田区, 江東区, 品川区,    ║
║   目黒区, 大田区, 世田谷区, 渋谷区, 中野区, 杉並区, 豊島区, 北区, 荒川区,    ║
║   板橋区, 練馬区, 足立区, 葛飾区, 江戸川区, 八王子市, 立川市, 武蔵野市,      ║
║   三鷹市, 青梅市, 府中市, 昭島市                                             ║
║   ... 他 23 地域 (省略)                                                      ║
╠══════════════════════════════════════════════════════════════════════════════╣
║ VPHW51  2014-02-12 13:19:00  気象庁予報部                                    ║
╚══════════════════════════════════════════════════════════════════════════════╝
"
`;

exports[`displayTornadoAdvisory - Phase D 配色言語 > NO_COLOR snapshot: 取消 1`] = `
"
                                                                                
 ▼ 取消 竜巻注意情報                                                            
                                                                                
┌──────────────────────────────────────────────────────────────────────────────┐
│ 竜巻注意情報  取消  [取消]                                                   │
│ 東京都竜巻注意情報                                                           │
├──────────────────────────────────────────────────────────────────────────────┤
│ 竜巻注意情報は取り消されました                                               │
├──────────────────────────────────────────────────────────────────────────────┤
│ VPHW50  2009-08-10 07:38:00  気象庁予報部                                    │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;
